dtor/tests/errors/dtor_bad_crate_path.rs
use dtor::dtor;

#[dtor(crate_path = ::whatever)]
fn foo() {
}

fn main() {
}
