dtor/tests/errors/dtor_bad_crate_path.stderr
error[E0433]: cannot find `whatever` in the crate root
 --> tests/errors/dtor_bad_crate_path.rs:3:23
  |
3 | #[dtor(crate_path = ::whatever)]
  |                       ^^^^^^^^ could not find `whatever` in the list of imported crates
